--- a/css/faq.css
+++ b/css/faq.css
@@ -1,105 +1,142 @@
-:root{
-    --primary: #0a0e29;
-    --secondary: #B9A13F;
-    --black: #333;
-    --white: #fff;
-    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --primary: #0a0e29;
+  --secondary: #b9a13f;
+  --row: #2494a2;
+  --background: #fefff2;
+  --black: #333;
+  --white: #fff;
+  --box-shadow: 2px 2px 18px rgba(14 52 54 / 15%);
+  --shadow: rgba(0, 0, 0, 0.4);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins';
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  scroll-padding-top: 3rem;
+  list-style: none;
+  text-decoration: none;
 }
 
 
-* {
-    font-family: 'Poppins', sans-serif;
-    margin: 0; 
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-transform: capitalize;
-    transition: .2s linear;
-    text-decoration: none;
-    list-style: none;
-  }
-  
-  /* Header */
-  li, a, button {
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-  }
-  
-  body {
-    height: 100vh;
-    width: 100%;
-    background: #fefff2;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 999;
-    position: sticky;
-    background-color: #0a0e29;
-    padding-left: 9%;
-    padding-right: 9%;
-    height: 60px;
-  }
-  
-  .logo {
-    cursor: pointer;
-  }
-  
-  nav {
-    order: 1;
-  }
-  
-  .nav_links {
-    list-style: none;
-  }
-  
-  .nav_links a {
-    color: #B9A13F;
-  }
-  
-  .nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
-  }
-  
-  .nav_links li:nth-child(1) {
-    padding: 0px 20px 0px 0px;
-  }
-  
-  .nav_links li a {
-    
-    transition: all 0.3s ease 0s;
-  }
-  
-  .nav_links li a:hover {
-    color: #fff;
-  }
-  
-  .cta {
-    order: 1;
-  }
-  
-  button {
-    margin-left: 20px;
-    padding: 9px 25px;
-    background-color: #B9A13F;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-  }
-  
-  button:hover {
-    color: #fff;
-  }
-  
-/* End */
+/* Header Start */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  height: 80px;
+  background: var(--primary);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
 
-/* faq */
+header img .logo {
+  font-size: 30px;
+}
+
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
+}
+
+#navbar li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--secondary);
+  transition: 0.3 ease;
+}
+
+#navbar li a:hover{
+  color: var(--background);
+  transition: .5s ease;
+}
+
+#mobile {
+  display: none;
+  align-items: center;
+}
+
+#close {
+  display: none;
+}
+
+@media (max-width: 799px) {
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: var(--primary);
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active {
+    right: 0;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+  }
+
+  #navbar li a:hover{
+    color: var(--background);
+    transition: .5s ease;
+  }
+
+  #mobile {
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i {
+    color: var(--secondary);
+    font-size: 24px;
+    padding-left: 15px;
+  }
+
+  #mobile i:hover{
+    color: var(--background);
+    transition: .5s ease;
+  }
+
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #login {
+    display: none;
+  }
+}
+/* End Navbar */
+
+/* Start FAQ */
 .faq #accordion{
     color: var(--white);
     margin: 100px auto;
@@ -146,126 +183,102 @@
 .faq #accordion label + input[type="radio"]:checked + .content{
     min-height: 200px;
 }
-/* end */
+/* End FAQ */
 
-/* Footer */
-  footer {
-    padding: 80px 10% 70px;
-    display: flex;
-    flex-wrap: wrap;
-    /* grid-template-columns: repeat(auto-fit, minmax(200px, auto)); */
-    /* gap: 3.5rem; */
-    background:#0a0e29 ;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-
-  .footer1{
-    max-width: 1170px;
-    margin: auto;
-  }
-
-  .row{
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .footer-content{
-    width: 25%;
-    padding: 10px 15px;
-
+/* Start Footer */
+footer {
+	background-color: var(--primary);
+	padding: 100px 0;
   }
   
-  .footer-content h4 {
-    font-size: 18px;
-    color: var(--secondary);
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    font-weight: 500;
-    position: relative;
-  }
-
-  
-  .footer-content li {
-      margin-bottom: 16px;
+  .footer {
+	max-width: 1170px;
+	margin: auto;
   }
   
-  .footer-content li a {
-      display: block;
-      color: #d6d6d6;
-      font-size: 15px;
-      font-weight: 400;
-      transition: all .40s ease;
+  .row {
+	display: flex;
+	flex-wrap: wrap;
   }
   
-  .footer-content li a:hover {
-      transform: translateY(-3px) translateX(-5px);
-      color: var(--white);
+  .footer-col {
+	width: 25%;
+	padding: 10px 15px;
+  }
+  .footer-col h4 {
+	font-size: 18px;
+	color: var(--secondary);
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+  }
+  .footer-col h4::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -10px;
+	background-color: var(--row);
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
   }
   
-  .footer-content p {
-      color: #d6d6d6;
-      font-size: 16px;
-      line-height: 30px;
-      margin: 20px 0;
+  .footer-col ul li{
+	list-style: none;
   }
   
-  .icons a {
-      display: inline-block;
-      font-size: 22px;
-      color: #d6d6d6;
-      margin-right: 17px;
-      transition: all .40s ease;
+  .footer-col ul li:not(:last-child) {
+	margin-bottom: 10px;
   }
   
-  .icons a:hover {
-      color: #fff;
-      transform: translateY(-3px) translateX(-5px);
+  .footer-col ul li a {
+	font-size: 16px;
+	text-transform: capitalize;
+	text-decoration: none;
+	font-weight: 300;
+	color: var(--white);
+	display: block;
+	transition: all 0.3s ease;
+  }
+  .footer-col ul li a:hover {
+	color: var(--secondary);
+	padding-left: 8px;
   }
   
-  .logo-partners img{
-      display: inline-block;
-      font-size: 22px;
-      margin-right: 10px;
-      padding: 2px;
-      transition: all .40s ease;
+  .footer-col .social-links a {
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	margin: 0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 25%;
+	color: var(--white);
+	transition: all 0.5s ease;
+  }
+  .footer-col .social-links a:hover {
+	transform: translateY(-3px) translateX(-5px);
   }
   
-  .logo-partners img:hover {
-      transform: translateY(-5px);
-  }
-
-  /* End */
-  
-  @media (max-width:1690px) {
-    footer{
-      /* padding: 50px 5% 40px; */
-    }
-  }
-  
-  @media (max-width:1120px) {
-    /* footer{
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-    } */
-    .footer-content{
-      width: 50%;
-      margin-bottom: 30px;
-    }
-  }
-  
-  @media (max-width:700px) {
-    /* footer{
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2.5rem; 
-    }*/
-    .footer-content{
-      width: 100%;
-    }
-  }
+  @media (max-width: 799px) {
+	  .contact h1 {
+		  font-size: 24px;
+		}
+		.footer-col {
+			width: 50%;
+			margin-bottom: 30px;
+		}
+	}
+	@media (max-width: 574px) {
+		.contact {
+			font-size: 24px;
+		}
+		.footer-col {
+			width: 100%;
+		}
+	}
+/* End Footer */
 
   
   
