--- a/css/form.css
+++ b/css/form.css
@@ -1,38 +1,164 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap");
 
-*{
+:root {
+  --primary: #0a0e29;
+  --secondary: #b9a13f;
+  --row: #2494a2;
+  --background: #fefff2;
+  --black: #333;
+  --white: #fff;
+  --box-shadow: 2px 2px 18px rgba(14 52 54 / 15%);
+  --shadow: rgba(0, 0, 0, 0.4);
+}
+
+* {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins';
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  scroll-padding-top: 3rem;
+  list-style: none;
+  text-decoration: none;
 }
 
 body{
-  min-height: 100vh;
+    line-height: 1.6;
+    background: var(--background);
+}
+
+
+/* Header Start */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  height: 80px;
+  background: var(--primary);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
+header img .logo {
+  font-size: 30px;
+}
+
+#navbar {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #FEFFF2;
 }
+
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
+}
+
+#navbar li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--secondary);
+  transition: 0.3 ease;
+}
+
+#navbar li a:hover{
+  color: var(--background);
+  transition: .5s ease;
+}
+
+#mobile {
+  display: none;
+  align-items: center;
+}
+
+#close {
+  display: none;
+}
+
+@media (max-width: 799px) {
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: var(--primary);
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active {
+    right: 0;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+  }
+
+  #navbar li a:hover{
+    color: var(--background);
+    transition: .5s ease;
+  }
+
+  #mobile {
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i {
+    color: var(--secondary);
+    font-size: 24px;
+    padding-left: 15px;
+  }
+
+  #mobile i:hover{
+    color: var(--background);
+    transition: .5s ease;
+  }
+
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #login {
+    display: none;
+  }
+}
+/* End Navbar */
 
 .container{
   position: relative;
   max-width: 900px;
-  width: 100%;
+  width: 80%;
   border-radius: 6px;
   padding: 30px;
-  margin: 0 15px;
+  margin: 10% auto;
   background-color: #D9D9D9;
   box-shadow: 0 5px 10px rgba(0,0,0,0.1);
 }
 
-.container header{
+.container h1{
   position: relative;
   font-size: 20px;
   font-weight: 600;
   color: #333;
 }
-.container header::before{
+.container h1::before{
   content: "";
   position: absolute;
   left: 0;
