--- a/css/facilities.css
+++ b/css/facilities.css
@@ -1,5 +1,4 @@
-
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,600&display=swap'); 
 
 :root {
 	--primary: #0a0e29;
@@ -28,6 +27,10 @@
   scroll-padding-top: 3rem;
   list-style: none;
   text-decoration: none;
+}
+
+body{
+  background-color: var(--background);
 }
 
 /* Header Start */
@@ -168,9 +171,8 @@ header img .logo {
 
 .team{
 	position: relative;
-	width: 100%;
-	height: 128vh;
-	background: #FEFFF2;
+	width: auto;
+	height: auto;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
