--- a/css/faq.css
+++ b/css/faq.css
@@ -137,51 +137,136 @@ header img .logo {
 /* End Navbar */
 
 /* Start FAQ */
-.faq #accordion{
-    color: var(--white);
-    margin: 100px auto;
-    width: 600px;
+::selection{
+  background: #7d2ae8;
+  color: #fff;
+}
+.accordion{
+  display: flex;
+  /* max-width: 1010px; */
+  width: 100%;
+  align-items: center;
+  justify-content:right;
+  background: #fefff2;
+  padding: 45px 90px 45px 60px;
+}
+.accordion .image-box{
+  height: 360px;
+  width: 300px;
+}
+.accordion .image-box img{
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+.accordion .accordion-text{
+  width: 60%;
+}
+.accordion .accordion-text .title{
+  font-size: 35px;
+  font-weight: 600;
+  color: #b9a13f;
+  font-family: 'Fira Sans', sans-serif;
+  text-align: center;
+}
+.accordion .accordion-text .faq-text{
+  margin-top: 25px;
+  height: 263px;
+  overflow-y: auto;
+}
+.faq-text::-webkit-scrollbar{
+  display: none;
+}
+.accordion .accordion-text li{
+  list-style: none;
+  cursor: pointer;
+}
+.accordion-text li .question-arrow{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.accordion-text li .question-arrow .question{
+  font-size: 18px;
+  font-weight: 500;
+  color: #595959;
+  transition: all 0.3s ease;
+}
+.accordion-text li .question-arrow .arrow{
+  font-size: 20px;
+  color: #595959;
+  transition: all 0.3s ease;
+}
+.accordion-text li.showAnswer .question-arrow .arrow{
+  transform: rotate(-180deg);
+}
+.accordion-text li:hover .question-arrow .question,
+.accordion-text li:hover .question-arrow .arrow{
+  color: #b9a13f;
+}
+.accordion-text li.showAnswer .question-arrow .question,
+.accordion-text li.showAnswer .question-arrow .arrow{
+  color: #b9a13f;
+}
+.accordion-text li .line{
+  display: block;
+  height: 2px;
+  width: 100%;
+  margin: 10px 0;
+  background: rgba(0, 0, 0, 0.1);
+}
+.accordion-text li p{
+  width: 92%;
+  font-size: 15px;
+  font-weight: 500;
+  color: #595959;
+  display: none;
+  padding-top: 10px;
+}
+.accordion-text li.showAnswer p{
+  display: block;
 }
 
-.faq #accordion li{
-    list-style: none;
+@media (max-width: 994px) {
+  body{
+    padding: 40px 20px;
+  }
+  .accordion{
+    max-width: 100%;
+    padding: 45px 60px 45px 60px;
+  }
+  .accordion .image-box{
+    height: 360px;
+    width: 220px;
+  }
+  .accordion .accordion-text{
+    width: 63%;
+  }
+}
+@media (max-width: 820px) {
+  .accordion{
+    flex-direction: column;
+  }
+  .accordion .image-box{
+    height: 360px;
+    width: 300px;
+    background: #b9a13f;
     width: 100%;
-    margin-bottom: 10px;
-    background-color: var(--primary);
-    padding: 10px;
-    border-radius: 12px;
+    border-radius: 25px;
+    padding: 30px;
+  }
+  .accordion .accordion-text{
+    width: 100%;
+    margin-top: 30px;
+  }
 }
-
-.faq #accordion li label{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    color: var(--secondary);
-}
-
-.faq #accordion li label span{
-    transform: rotate(90deg);
-    font-size: 22px;
-}
-
-.faq #accordion label + input[type="radio"]{
-    display: none;
-}
-
-.faq #accordion .content{
-    padding: 0 10px;
-    line-height: 26px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s;
-}
-
-.faq #accordion label + input[type="radio"]:checked + .content{
-    min-height: 200px;
+@media (max-width: 538px) {
+  .accordion{
+    padding: 25px;
+  }
+  .accordion-text li p{
+    width: 98%;
+  }
 }
 /* End FAQ */
 
