--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,600&display=swap'); 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,600&display=swap");
 
 :root {
   --primary: #0a0e29;
@@ -11,10 +11,12 @@
   --shadow: rgba(0, 0, 0, 0.4);
 }
 
-*, *::before, *::after{
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   box-sizing: border-box;
   scroll-behavior: smooth;
   scroll-padding-top: 3rem;
@@ -22,11 +24,10 @@
   text-decoration: none;
 }
 
-body{
-    line-height: 1.6;
-    background: var(--background);
+body {
+  line-height: 1.6;
+  background: var(--background);
 }
-
 
 /* Header Start */
 header {
@@ -67,9 +68,9 @@ header img .logo {
   transition: 0.3 ease;
 }
 
-#navbar li a:hover{
+#navbar li a:hover {
   color: var(--background);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 #mobile {
@@ -106,9 +107,9 @@ header img .logo {
     margin-bottom: 25px;
   }
 
-  #navbar li a:hover{
+  #navbar li a:hover {
     color: var(--background);
-    transition: .5s ease;
+    transition: 0.5s ease;
   }
 
   #mobile {
@@ -122,9 +123,9 @@ header img .logo {
     padding-left: 15px;
   }
 
-  #mobile i:hover{
+  #mobile i:hover {
     color: var(--background);
-    transition: .5s ease;
+    transition: 0.5s ease;
   }
 
   #close {
@@ -141,24 +142,24 @@ header img .logo {
 }
 /* End Navbar */
 
-.container{
+.container {
   position: relative;
   max-width: 900px;
   width: 80%;
   border-radius: 6px;
   padding: 30px;
   margin: 10% auto;
-  background-color: #D9D9D9;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  background-color: #d9d9d9;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.container h1{
+.container h1 {
   position: relative;
   font-size: 20px;
   font-weight: 600;
   color: #333;
 }
-.container h1::before{
+.container h1::before {
   content: "";
   position: absolute;
   left: 0;
@@ -168,22 +169,22 @@ header img .logo {
   border-radius: 8px;
   background-color: #4070f4;
 }
-.container form{
+.container form {
   position: relative;
   margin-top: 16px;
   min-height: 300px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
-.container form .details{
+.container form .details {
   margin-top: 30px;
 }
 
-.container form .details.ID{
+.container form .details.ID {
   margin-top: 10px;
 }
 
-.container form .title{
+.container form .title {
   display: block;
   margin-bottom: 8px;
   font-size: 16px;
@@ -192,27 +193,27 @@ header img .logo {
   color: #333;
 }
 
-.container form .fields{
+.container form .fields {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-form .fields .input-field{
+form .fields .input-field {
   display: flex;
   width: calc(100% / 3 -15px);
   flex-direction: column;
   margin: 4px 0;
 }
 
-.input-field label{
+.input-field label {
   font-size: 12px;
   font-weight: 500;
   color: #2e2e2e;
   justify-content: center;
 }
-.input-field input{
+.input-field input {
   outline: none;
   font-size: 14px;
   font-weight: 400;
@@ -222,37 +223,37 @@ form .fields .input-field{
   padding: 0 15px;
   height: 42px;
   margin: 8px 0;
-  width: 200px;
+    width: 200px;
 }
 
-.input-field input:is(:focus, :valid){
-  box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+.input-field input:is(:focus, :valid) {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.13);
 }
 
-.input-field input[type="date"]{
-  color:#707070;
+.input-field input[type="date"] {
+  color: #707070;
 }
 
-.input-field input[type="date"]:valid{
+.input-field input[type="date"]:valid {
   color: #333;
 }
 
 select {
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  -ms-appearance:none;
-  appearance:none;
-  outline:0;
-  box-shadow:none;
-  border:0!important;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
   background: #fff;
   background-image: none;
   flex: 1;
-  padding: 0 .5em;
+  padding: 0 0.5em;
   color: #7f7f7f;
-  cursor:pointer;
+  cursor: pointer;
   font-size: 1em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 select::-ms-expand {
   display: none;
@@ -263,26 +264,26 @@ select::-ms-expand {
   width: 25vh;
   height: 2.5em;
   line-height: 3;
-  background: #B9A13F;
+  background: #b9a13f;
   overflow: hidden;
-  border-radius: .25em;
+  border-radius: 0.25em;
 }
 .select::after {
-  content: '\25BC';
+  content: "\25BC";
   position: absolute;
   top: 0;
   right: 0;
-  padding: 0 .5em;
+  padding: 0 0.5em;
   /* background: #B9A13F; */
-  cursor:pointer;
-  pointer-events:none;
-  transition:.25s all ease;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
 }
 .select:hover::after {
   color: #000;
 }
 
-.buttons .btnText{
+.buttons .btnText {
   align-items: center;
   text-align: center;
   justify-self: center;
@@ -296,17 +297,16 @@ select::-ms-expand {
   border-radius: 5px;
   margin: 25px 0;
   margin-right: 25px;
-  background-color: #B9A13F;
+  background-color: #b9a13f;
   transition: all 0.3s linear;
   cursor: pointer;
   border: 1px solid #aaa;
 }
 
-.buttons .btnText:hover{
+.buttons .btnText:hover {
   background-color: var(--primary);
   color: var(--secondary);
 }
-
 
 /* Start Pop up */
 
